DEV6_Componentslist/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Contact.MailingStreet &amp; BR() &amp; Contact.MailingCity &amp; BR() &amp; Contact.MailingState &amp; BR() &amp; Contact.MailingCountry &amp; BR() &amp; Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Booking_Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Booking Enquiry</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deregistering__c</fullName>
        <label>Reason for Deregistering</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Auto_Reminder_Email_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer Auto-Reminder Email opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_de_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer de-registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ADM_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>AgileAcceleratorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dummy_CourseId__c</fullName>
        <label>dummy_CourseId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dummy_Email__c</fullName>
        <label>dummy_Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dummy_name__c</fullName>
        <label>dummy_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_List</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All List</label>
    </listViews>
    <listViews>
        <fullName>Booking_Enquiry_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Booking Enquiry</label>
        <queue>Booking_Enquiry</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Course_Booking_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Course Booking Queue</label>
        <queue>Course_Booking_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enquiries_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Enquiries Team</label>
        <queue>Enquiries_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Incidents</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>ITS</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Unanswered_queries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Unanswered queries</label>
    </listViews>
    <recordTypes>
        <fullName>Case</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>De_Registration</fullName>
        <active>true</active>
        <businessProcess>Case</businessProcess>
        <label>De-Registration</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>case_should_allow_when_status_is_new</fullName>
        <active>true</active>
        <description>whenever user create cases, it should create under any status, but not on closed,Escalated and On Hold status.</description>
        <errorConditionFormula>OR
(

ISPICKVAL( Status , &apos;Closed&apos;),
ISPICKVAL(Status ,&apos;Escalated&apos;),
ISPICKVAL(Status ,&apos;On Hold&apos;)
)
&amp;&amp;

OR
(
NOT(ISPICKVAL(Status ,&apos;New&apos;))
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Case should create when status is new only.</errorMessage>
    </validationRules>
</CustomObject>